2006-07-09  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* .cvsignore: add a whole bunch of files to .cvsignore

2006-07-09  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* examples/*: Don't include <gtkmm.h> if possible.  Modified all examples to
	only include the headers that they absolutely need.  Hopefully this speeds
	up compilation at least slightly and reduces the amount of recompilation
	needed for examples due to unrelated changes.

2006-07-08  Marko Anastasov <marko@marko.anastasov.name>

	* examples/book/printing/simple/examplewindow.cc:
	* examples/book/printing/simple/main.cc:
	* examples/book/printing/simple/printformoperation.cc:
	Minor code cleanup to fit the tutorial.

2006-07-08  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/entrycompletion.hg:
	* gtk/src/iconview.hg:
	* gtk/src/treeviewcolumn.hg: Added TODOs to mention new bases clases 
	(interfaces that these GTypes now implement) that we may not add as 
	base classes without breaking C++ ABI. 

2006-07-08  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/printoperationpreview.hg: Commented-out the signals, with a TODO, 
	for now because they seem to cause a crash when viewing the preview.

2006-07-08  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/printoperation.hg: Derive from, and implement, PrintOperationPreview, 
	so that the dynamic_cast in the Glib::wrap() in on_preview() can succeed.
	* examples/book/printing/advanced/examplewindow.cc:
	* examples/book/printing/simple/examplewindow.cc: Do not set a window 
	border width. It looks odd, and it is not normal to have a border around the 
	menu.

2006-07-08  Murray Cumming  <murrayc@murrayc.com>

	* examples/book/printing/advanced/Makefile.am:
	* examples/book/printing/simple/Makefile.am: Rename the executable to 
	example, to match the other examples.

2006-07-07  Marko Anastasov <marko@marko.anastasov.name>

	* configure.in
	* examples/book/printing/Makefile.am: Split the printing example into
	"simple" and "advanced".