@@ -9,6 +9,10 @@
     font-family: Verdana, Arial, Helvetica, sans-serif;
     font-size: 15px;
    }
+   a:link, a:visited  {
+       color: #4A5DB4;
+       font-weight: bold;
+   }
   </style>
  </head>
  <body bgcolor="#F0F0F0">
@@ -26,7 +30,7 @@
    <table cellspacing="1" cellpadding="2" width="100%" border="0">
     <tbody>
      <tr>
-      <th width="33%" bgcolor="#bd2c4a" style="border: 1px solid black; color: white">General</th>
+      <th width="33%" bgcolor="#7f201f" style="border: 1px solid black; color: white">General</th>
      </tr>
      <tr>
       <td height="75">
@@ -79,7 +83,7 @@
       </td>
      </tr>
      <tr>
-      <th bgcolor="#bd2c4a" style="border: 1px solid black; color: white">API Reference</th>
+      <th bgcolor="#7f201f" style="border: 1px solid black; color: white">API Reference</th>
      </tr>
      <tr>
       <td valign="Top">
@@ -183,7 +187,7 @@
        <table cellspacing="1" cellpadding="2" width="100%" border="0">
         <tbody>
          <tr>
-          <th width="33%" bgcolor="#bd2c4a" style="border: 1px solid black; color: white">Others<br>
+          <th width="33%" bgcolor="#7f201f" style="border: 1px solid black; color: white">Others<br>
           </th>
          </tr>
          <tr>
