@@ -164,6 +164,7 @@ tbody {
     -moz-border-radius: 5px;
 }
 
+h1, h2, h3, h4, h5 { color: #b02c29; }
 h1 { font-size: 1.72em; margin-top: 0em; }
 h2 { font-size: 1.44em; }
 h2.title { margin-top: 1.72em; border-bottom: solid 1px; }
@@ -226,11 +227,7 @@ div.navHeader a:visited, div.navFooter a:visited   {
 
 div.navHeader, div.navFooter   {
     padding: 1em;
-    /*
-    background-color: #E8EBFF;
-    border: 1px solid #C5C9E5;
-    */
-    background-color: #BD2C4A;
+    background-color: #7f201f;
     border: 1px solid #000000;
 }
 
@@ -283,8 +280,8 @@ div.authorgroup {
     float: right;
     margin: 0em 0em 2em 2em;
     padding: 1em;
-    background-color: #EEEEEE;
-    border: 1px solid #CCCCCC;
+    background-color: #eeeeee;
+    border: 1px solid #cccccc;
 }
 
 div.author  {
