@@ -1,3 +1,10 @@
+2006-07-10  Jonathon Jongsma  <jonathon.jongsma@gmail.com>
+
+	* docs/index.html: update to match the style of the new website a bit
+	* docs/tutorial/style.css: change the style of the tutorial slightly to
+	match the website style.  These are just minor tweaks.  Ideally I think they
+	should both get a bit more of an overhaul.
+
 2006-07-09  Jonathon Jongsma  <jonathon.jongsma@gmail.com>
 
 	* .cvsignore: add a whole bunch of files to .cvsignore
